stateDiagram-v2
    [*] --> pending: persist 节点 commit
    pending --> in_progress: PATCH state=in_progress [副作用] 若 plan.status='active' → status='adopted', version++ 写 plan.adopted_at
    in_progress --> completed: PATCH state=completed + actual_minutes
    in_progress --> abandoned: PATCH state=abandoned + abandoned_reason (reason='other' 时必填 abandoned_reason_text)
    pending --> abandoned: PATCH + abandoned_reason
    pending --> expired: cron CRON-1（每 5 分钟） WHERE expires_at<now()
    in_progress --> expired: 同上
    completed --> [*]
    abandoned --> [*]
    expired --> [*]
